--- a/desktop/Proj D/MainWindow.xaml
+++ b/desktop/Proj D/MainWindow.xaml
@@ -1,8 +1,22 @@
-﻿<Window x:Class="Proj_D.MainWindow"
+﻿<Controls:MetroWindow x:Class="Proj_D.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid Margin="0,0,0,-58">
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        Title="MainWindow"
+        Height="490.298"
+        Width="525"
+        ShowTitleBar="True"
+        ShowIconOnTitleBar="True"
+        WindowState="Maximized">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/Icons.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatSlider.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+    <Grid Margin="0,0,0,2">
         <Label Content="Nome curso" Height="28" HorizontalAlignment="Left" Margin="12,8,0,0" Name="lblNomeCurso" VerticalAlignment="Top" />
         <TextBox Height="23" Margin="93,12,93,0" Name="txtNomeCurso" VerticalAlignment="Top" />
 
@@ -11,7 +25,7 @@
 
         <Button Content="Adicionar" Height="82" Margin="0,12,12,0" Name="btnAddFileM3u8" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Click="btnAddFileM3u8_Click" />
 
-        <ListView Name="lsvAulasDownload" Margin="12,158,12,12">
+        <ListView Name="lsvAulasDownload" Margin="12,158,12,10">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="" Width="10" >
@@ -48,4 +62,4 @@
         <Label Content="Url m3u8" Height="28" HorizontalAlignment="Left" Margin="12,95,0,0" x:Name="lblUrlM3u8" VerticalAlignment="Top" />
         <TextBox Height="23" Margin="93,99,93,0" x:Name="txtUrlM3u8" VerticalAlignment="Top" />
     </Grid>
-</Window>
+</Controls:MetroWindow>
